@@ -4,7 +4,7 @@ MYSQLI=-I/usr/include/mysql
 MYSQLL=-L/usr/lib/mysql -lmysqlclient
 SRCS=xevres.c subnetlist.c subnettrust.c fakeuser.c realnamegline.c stringtools.c general.c serverhandlers.c usercommands.c splitdb.c arrays.c dynamic.c trusts.c md5.c chandb.c chancheck.c
 OBJS=$(SRCS:.c=.o)
-OTHERFLAGS=-Wall -O3 -g -fPIC -export-dynamic
+OTHERFLAGS=-Wall -O3 -g -fPIC -export-dynamic -lcrypt
 Q=@
 all: $(OBJS) globals.h config.h stringtools.h
 	@echo Compiling Xevres
